--- a/src/wp-content/themes/timber/templates/pages/events-page.twig
+++ b/src/wp-content/themes/timber/templates/pages/events-page.twig
@@ -20,5 +20,6 @@
 </div>
 
 <script src="{{ site.theme.link }}/static/js/navigation.js"></script>
+<script src="{{ site.theme.link }}/static/js/events-page.js"></script>
 </body>
 </html>
