--- a/src/wp-content/themes/timber/blocks/event-rock/assets/rocher.scss
+++ b/src/wp-content/themes/timber/blocks/event-rock/assets/rocher.scss
@@ -10,6 +10,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
+  transition: 0.3s;
   .rocher{
     &-content {
       position: absolute;
@@ -32,3 +34,11 @@
     }
   }
 }
+
+@media (max-width: 1400px) {
+ #rocher {
+   background-position-y: 0px;
+   transition: 0.3s;
+ }
+}
+
