--- a/src/wp-content/themes/timber/static/style/home-page.scss
+++ b/src/wp-content/themes/timber/static/style/home-page.scss
@@ -1,4 +1,3 @@
-
 body {
   margin: 0;
   //background-color: black;
@@ -11,7 +10,6 @@ body {
 .exploration {
   visibility: hidden;
   opacity: 0;
-
 }
 
 .exploration.exploration--mode {
@@ -31,6 +29,7 @@ body {
   pointer-events: all;
 }
 
+
 svg.exploration {
   width: 100vw;
   height: 100vh;
@@ -49,48 +48,48 @@ svg.exploration {
     height: 100%;
     overflow: hidden;
   }
-  .roche:hover {
-    -webkit-filter: invert(0.9);
-    filter: invert(0.9);
-    transition: filter 0.8s;
-  }
-  .roche:hover .text {
-    opacity: 1;
-    transition: opacity 1s;
-    transition-delay: 0.7s;
-  }
-  .roche {
-    z-index: 10;
-    position: relative;
-    margin: auto;
-    transition: filter 3s;
-    width: 200px;
-    height: 200px;
-    .text {
-      opacity: 0;
-      transition: opacity 3s;
-      color: white;
-      font-family: raleway-bold sans-serif;
-      font-weight: bold;
-    }
-    &-img {
-      width: 200px;
-      height: 200px;
-      background-repeat: no-repeat;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-  }
-  .roche_1 {
-    bottom: -60%;
-    right: 40%;
-
-  }
-  .roche_2 {
-    bottom: 8%;
-    right: -30%;
-  }
+  //.roche:hover {
+  //  -webkit-filter: invert(0.9);
+  //  filter: invert(0.9);
+  //  transition: filter 0.8s;
+  //}
+  //.roche:hover .text {
+  //  opacity: 1;
+  //  transition: opacity 1s;
+  //  transition-delay: 0.7s;
+  //}
+  //.roche {
+  //  z-index: 10;
+  //  position: relative;
+  //  margin: auto;
+  //  transition: filter 3s;
+  //  width: 200px;
+  //  height: 200px;
+  //  .text {
+  //    opacity: 0;
+  //    transition: opacity 3s;
+  //    color: white;
+  //    font-family: raleway-bold sans-serif;
+  //    font-weight: bold;
+  //  }
+  //  &-img {
+  //    width: 200px;
+  //    height: 200px;
+  //    background-repeat: no-repeat;
+  //    display: flex;
+  //    align-items: center;
+  //    justify-content: center;
+  //  }
+  //}
+  //.roche_1 {
+  //  bottom: -60%;
+  //  right: 40%;
+  //
+  //}
+  //.roche_2 {
+  //  bottom: 8%;
+  //  right: -30%;
+  //}
 }
 
 
@@ -103,18 +102,18 @@ svg.exploration {
   margin-top: 30%;
   & > svg {
     margin: 10px;
-    width: 90px;
+    width: 120px;
     height: auto;
   }
 
   & > svg .light-beam{
     opacity: 0;
-    transition: opacity 0.2s;
+    transition: opacity 0.3s;
   }
-
   & > svg:hover .light-beam{
+    fill: #dfbb13 !important;
     opacity: 1;
-    transition: opacity 0.2s;
+    transition: opacity 0.3s;
   }
 
   & > svg, .homepage-explore > span {
