--- a/src/wp-content/themes/timber/templates/html-header.twig
+++ b/src/wp-content/themes/timber/templates/html-header.twig
@@ -12,4 +12,5 @@
     <link rel="author" href="{{ site.theme.link }}/humans.txt" />
     <link rel="pingback" href="{{ site.pingback_url }}" />
     <link rel="profile" href="http://gmpg.org/xfn/11">
+    <link rel="shortcut icon" href="{{ site.theme.link }}/images/icons/favicon.ico" />
     {{function('wp_head')}}
