--- a/src/wp-content/themes/timber/templates/index.twig
+++ b/src/wp-content/themes/timber/templates/index.twig
@@ -9,3 +9,8 @@
 	
 	{% include 'partial/pagination.twig' with { pagination: posts.pagination({show_all: false, mid_size: 3, end_size: 2}) } %}
 {% endblock %}
+
+
+{#Le mineur chante la terre : "A Elle il se sent lié - intimement uni; pour Elle il se sent la même ardeur - que pour une fiancé."#}
+
+{#Gaston Bachelard.#}
