--- a/src/wp-content/themes/timber/templates/mdf-menu.twig
+++ b/src/wp-content/themes/timber/templates/mdf-menu.twig
@@ -1,7 +1,7 @@
 {% if menu %}
 	<div class="nav-menu">
 		<div id="nav-menu-icon" onclick="activateMenu()" class="nav-menu-icon">
-			<img type="svg" src="{{ site.theme.link }}/images/noun_menu.svg" alt="">
+			<img type="svg" src="{{ site.theme.link }}/images/menu_mineurs.svg" alt="">
 		</div>
 		<div id="nav-menu-items" class="nav-menu-items">
 			{% for item in menu.get_items %}
