--- a/src/wp-content/themes/timber/static/style/home-page.css
+++ b/src/wp-content/themes/timber/static/style/home-page.css
@@ -56,7 +56,7 @@ svg.exploration {
 }
 .homepage-explore > svg {
   margin: 10px;
-  width: 120px;
+  width: 140px;
   height: auto;
 }
 .homepage-explore > svg .light-beam {
@@ -162,17 +162,68 @@ svg.exploration {
   width: 542px;
   height: 584px;
   background-size: cover;
+  transition: 0.3s;
+  text-decoration: none;
 }
-.homepage-right-nextDate {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+.homepage-right:hover {
+  transition: 0.3s;
+  -webkit-filter: drop-shadow(-10px -6px 0px #dfbb13) drop-shadow(14px 9px 0px #dfbb13);
+  filter: drop-shadow(-10px -6px 0px #dfbb13) drop-shadow(14px 9px 0px #dfbb13);
+}
+.homepage-right-event {
+  padding: 30px;
+  margin-left: 50px;
+  border: solid;
+  border-radius: 4px;
+  border-width: 8px !important;
+  animation: ease;
+  border-color: transparent;
+  transition: 0.3s;
+  cursor: pointer;
   color: white;
+  display: flex;
 }
-.homepage-right-nextDate h4 {
-  font-size: 35px;
+.homepage-right-event-container {
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+}
+.homepage-right-event-container h2 {
+  font-size: 30px;
+  color: white;
+  margin-left: 100px;
+  text-align: center;
+}
+.homepage-right-event-image {
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+}
+.homepage-right-event-content {
+  padding: 0 20px;
+}
+.homepage-right-event-content-title {
+  font-size: 1.7em;
+}
+.homepage-right-event-content-title h3 {
+  margin-bottom: 10px;
+  margin-top: 15px;
+}
+.homepage-right-event-content-date {
+  margin-bottom: 5px;
+  font-weight: bold;
+  color: #dfbb13;
+  font-size: 1.3em;
+}
+.homepage-right-event-content-location {
+  margin-bottom: 8px;
+  font-size: 1.1em;
+}
+.homepage-right-event-content p {
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 /*# sourceMappingURL=home-page.css.map */
