--- a/src/wp-content/themes/timber/static/style/home-page.scss
+++ b/src/wp-content/themes/timber/static/style/home-page.scss
@@ -48,48 +48,6 @@ svg.exploration {
     height: 100%;
     overflow: hidden;
   }
-  //.roche:hover {
-  //  -webkit-filter: invert(0.9);
-  //  filter: invert(0.9);
-  //  transition: filter 0.8s;
-  //}
-  //.roche:hover .text {
-  //  opacity: 1;
-  //  transition: opacity 1s;
-  //  transition-delay: 0.7s;
-  //}
-  //.roche {
-  //  z-index: 10;
-  //  position: relative;
-  //  margin: auto;
-  //  transition: filter 3s;
-  //  width: 200px;
-  //  height: 200px;
-  //  .text {
-  //    opacity: 0;
-  //    transition: opacity 3s;
-  //    color: white;
-  //    font-family: raleway-bold sans-serif;
-  //    font-weight: bold;
-  //  }
-  //  &-img {
-  //    width: 200px;
-  //    height: 200px;
-  //    background-repeat: no-repeat;
-  //    display: flex;
-  //    align-items: center;
-  //    justify-content: center;
-  //  }
-  //}
-  //.roche_1 {
-  //  bottom: -60%;
-  //  right: 40%;
-  //
-  //}
-  //.roche_2 {
-  //  bottom: 8%;
-  //  right: -30%;
-  //}
 }
 
 
@@ -102,7 +60,7 @@ svg.exploration {
   margin-top: 30%;
   & > svg {
     margin: 10px;
-    width: 120px;
+    width: 140px;
     height: auto;
   }
 
@@ -173,15 +131,70 @@ svg.exploration {
   width: 542px;
   height: 584px;
   background-size: cover;
-  &-nextDate {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+  transition: 0.3s;
+  text-decoration: none;
+  &:hover {
+    transition: 0.3s;
+    -webkit-filter: drop-shadow(-10px -6px 0px #dfbb13) drop-shadow(14px 9px 0px #dfbb13);
+    filter: drop-shadow(-10px -6px 0px #dfbb13) drop-shadow(14px 9px 0px #dfbb13);
+  }
+  &-event {
+    padding: 30px;
+    margin-left: 50px;
+    border: solid;
+    border-radius: 4px;
+    border-width: 8px !important;
+    animation: ease;
+    border-color: transparent;
+    transition: 0.3s;
+    cursor: pointer;
     color: white;
-    h4 {
-      font-size: 35px;
+    display: flex;
+    &-container {
+      padding: 20px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      width: 100%;
+      h2 {
+        font-size: 30px;
+        color: white;
+        margin-left: 100px;
+        text-align: center;
+      }
+    }
+    //&:hover {
+    //  border-color: #dfbb13;
+    //  transition: 0.3s;
+    //}
+    &-image {
+      border-radius: 4px;
+      display: flex;
+      align-items: center;
+    }
+    &-content {
+      padding: 0 20px;
+      &-title {
+        font-size: 1.7em;
+        h3 {
+          margin-bottom: 10px;
+          margin-top: 15px;
+        }
+      }
+      &-date {
+        margin-bottom: 5px;
+        font-weight: bold;
+        color: #dfbb13;
+        font-size: 1.3em;
+      }
+      &-location {
+        margin-bottom: 8px;
+        font-size: 1.1em;
+      }
+      p {
+        margin-top: 0;
+        margin-bottom: 0;
+      }
     }
   }
 }
