--- a/src/wp-content/themes/timber/templates/pages/home-page.twig
+++ b/src/wp-content/themes/timber/templates/pages/home-page.twig
@@ -130,12 +130,25 @@
     <div class="homepage-left">
         <img src="{{ site.theme.link }}/images/roche_gauche.png" alt="">
     </div>
-    <div class="homepage-right" style="background-image: url('{{ site.theme.link }}/images/roche_droite.png')">
-        <div class="homepage-right-nextDate">
-            <h4>Prochaine date</h4>
-            <p>{{ nextDate.event_name }}</p>
+    <a href="{{ nextDateLink }}" target="_blank" class="homepage-right" style="background-image: url('{{ site.theme.link }}/images/roche_droite.png')">
+        <div class="homepage-right-event-container">
+            <h2>Prochaine date</h2>
+            <div class="homepage-right-event">
+                <div class="homepage-right-event-image">{{ nextDateImage }}</div>
+                <div class="homepage-right-event-content">
+                    <div class="homepage-right-event-content-title">
+                        <h3>{{ nextDate.event_name }}</h3>
+                    </div>
+                    <div class="homepage-right-event-content-date">
+                        <p>{{ nextDate.event_start_time|date("H\\hi") }}, {{ nextDate.event_start_date |date("j F Y") }}</p>
+                    </div>
+                    <div class="homepage-right-event-content-location">
+                        <p>{{ nextDateLocation }}</p>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
+    </a>
 
 
 </section>
