--- a/src/wp-content/themes/timber/static/style/home-page.css
+++ b/src/wp-content/themes/timber/static/style/home-page.css
@@ -14,7 +14,7 @@ body {
 .exploration.exploration--mode {
   visibility: visible;
   opacity: 1;
-  transition: opacity 1s;
+  /*transition: opacity 1s;*/
 }
 
 #exploration {
