--- a/src/wp-content/themes/timber/templates/pages/contact-page.twig
+++ b/src/wp-content/themes/timber/templates/pages/contact-page.twig
@@ -17,6 +17,10 @@
             </div>
         </article>
     {% endfor %}
+    <div class="contactPage-bottomImage">
+        <img src="{{ site.theme.link }}/images/img-contact.jpg" alt="">
+    </div>
+
 </div>
 
 <script src="{{ site.theme.link }}/static/js/navigation.js"></script>
