--- a/src/wp-content/themes/timber/static/style/about-page.css
+++ b/src/wp-content/themes/timber/static/style/about-page.css
@@ -50,17 +50,15 @@
   fill: white;
 }
 
-.contactPage {
-  position: absolute;
+.aboutPage {
+  position: fixed;
   color: white;
+  height: 100vh;
+  overflow: auto;
   width: 100%;
-  min-height: 100vh;
   background-size: cover;
 }
-.contactPage .entry-content {
-  height: 100vh;
-}
-.contactPage-title {
+.aboutPage-title {
   margin-top: 150px;
   margin-bottom: 100px !important;
   width: 100% !important;
@@ -69,25 +67,14 @@
   font-size: 3em;
   text-transform: uppercase;
 }
-.contactPage-content #nf-form-1-cont {
-  margin: auto;
+.aboutPage-content {
+  max-width: 100% !important;
+  margin-right: 20%;
+  margin-left: 20%;
 }
-.contactPage-content .nf-form-content input[type=button].send-button {
-  background: black;
-  color: white;
-  transition: all 0.3s;
-  border: 1px solid white;
-  cursor: pointer;
-}
-.contactPage-content .nf-form-content input[type=button].send-button:hover {
-  background: white;
-  color: black;
-  transition: all 0.3s;
-}
-.contactPage-bottomImage img {
-  width: 100%;
-  -webkit-mask-image: -webkit-gradient(linear, left bottom, left top, from(rgba(0, 0, 0, 0.8)), to(rgba(0, 0, 0, 0)));
-  mask-image: linear-gradient(to top, black, rgba(0, 0, 0, 0));
+.aboutPage-content > * {
+  margin-right: auto !important;
+  margin-left: auto !important;
 }
 
-/*# sourceMappingURL=contact-page.css.map */
+/*# sourceMappingURL=about-page.css.map */
