--- a/src/wp-content/themes/timber/static/style/contact-page.scss
+++ b/src/wp-content/themes/timber/static/style/contact-page.scss
@@ -12,13 +12,15 @@
 .contactPage {
     position: absolute;
     color: white;
-    height: 100%;
     width: 100%;
     min-height: 100vh;
     background-size: cover;
+    .entry-content {
+        height: 100vh;
+    }
     &-title {
-        margin-top: 100px;
-        margin-bottom: 50px !important;
+        margin-top: 150px;
+        margin-bottom: 100px !important;
         width: 100% !important;
         max-width: 100% !important;
         text-align: center;
@@ -41,6 +43,11 @@
                 transition: all .3s;
             }
         }
+    }
+    &-bottomImage img {
+        width: 100%;
+        -webkit-mask-image:-webkit-gradient(linear, left bottom, left top, from(rgba(0,0,0,0.8)), to(rgba(0,0,0,0)));
+        mask-image: linear-gradient(to top, rgba(0,0,0,1), rgba(0,0,0,0));
     }
 
 }
