--- a/src/wp-content/themes/timber/static/style/contact-page.css
+++ b/src/wp-content/themes/timber/static/style/contact-page.css
@@ -1,3 +1,11 @@
+h1, h2, h3, h4, h5 {
+  font-family: Andale Mono, "sans-serif";
+}
+
+p, span {
+  font-family: Arial, "sans-serif";
+}
+
 .nav-menu {
   position: absolute;
   margin-top: 1rem;
