--- a/src/wp-content/themes/timber/static/style/home-page.scss
+++ b/src/wp-content/themes/timber/static/style/home-page.scss
@@ -1,6 +1,9 @@
+@import "common/common";
+
 body {
   margin: 0;
-  //background-color: black;
+  background-repeat: no-repeat;
+  background-size: cover;
   width: 100vw;
   height: 100vh;
   overflow: hidden;
@@ -57,19 +60,19 @@ svg.exploration {
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  margin-top: 30%;
+  margin-top: 55vh;
   & > svg {
-    position: absolute;
+    //position: absolute;
     z-index: 1;
     margin: 10px;
     width: 140px;
     height: auto;
   }
   & > span {
-    position: relative;
+    //position: relative;
     top: 66px;
     left: 20px;
-    font-size: 21px;
+    font-size: 32px;
   }
 
 
@@ -83,7 +86,7 @@ svg.exploration {
     transition: opacity 0.3s;
   }
 
-  & > svg, .homepage-explore > span {
+  & > svg, > span {
     cursor: pointer;
   }
   @media( max-width: 1024px ) {
@@ -96,25 +99,26 @@ svg.exploration {
 /* nav */
 .nav {
   display: flex;
+  &-title {
+    position: absolute;
+    top: 70px;
+    width: 100%;
+    margin: auto;
+    text-align: center;
+    &-logo {
+      width: 700px;
+    }
+    & > .citation {
+      font-family: raleway-italic, sans-serif;
+      font-size: 24px;
+    }
+    .author {
+      margin-left: 15px;
+    }
+  }
+
 }
 
-.nav-title {
-  position: absolute;
-  top: 70px;
-  width: 100%;
-  margin: auto;
-  text-align: center;
-  h1 {
-    font-size: 60px;
-  }
-  & > .citation {
-    font-family: raleway-italic, sans-serif;
-    font-size: 24px;
-  }
-  .author {
-    margin-left: 15px;
-  }
-}
 
 @import "menu";
 
