--- a/src/wp-content/themes/timber/static/style/events-page.scss
+++ b/src/wp-content/themes/timber/static/style/events-page.scss
@@ -25,6 +25,9 @@
         max-width: 100% !important;
         text-align: center;
         font-size: 3em;
+        @media( max-width: $tablet_width ) {
+            font-size: 2em;
+        }
         text-transform: uppercase;
     }
     .eventsPage-content {
@@ -39,14 +42,16 @@
             border-width: 8px !important;
             animation: ease;
             border-color: transparent;
-            width: 800px;
+            max-width: 800px;
             transition: 0.3s;
             cursor: pointer;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
             &:hover {
                 border-color: #dfbb13;
                 transition: 0.3s;
             }
-            display: flex;
             &-image {
                 border-radius: 4px;
                 display: flex;
@@ -54,8 +59,17 @@
                 border: solid 4px;
                 width: 150px;
                 height: 150px;
+                margin-bottom: 25px;
             }
             &-content {
+                max-width: 600px;
+                @media( max-width: $desktop_width ) {
+                    max-width: 349px;
+                }
+                @media( max-width: $tablet_width ) {
+                    max-width: 600px;
+                }
+
                 padding: 0 20px;
                 .event-title {
                     margin-top: 0;
