--- a/src/wp-content/themes/timber/static/style/home-page.scss
+++ b/src/wp-content/themes/timber/static/style/home-page.scss
@@ -1,10 +1,11 @@
 @import "common/common";
+@import "variables-site/structure";
 
 body {
   margin: 0;
   background-repeat: no-repeat;
   background-size: cover;
-  width: 100vw;
+  //width: 100vw;
   height: 100vh;
   overflow: hidden;
 }
@@ -13,6 +14,9 @@ body {
 .exploration {
   visibility: hidden;
   opacity: 0;
+  @media(max-width: $tablet_width) {
+    display: none;
+  }
 }
 
 .exploration.exploration--mode {
@@ -23,10 +27,10 @@ body {
 
 #exploration {
   margin: auto;
-  top: 0px;
-  left: 0px;
-  right: 0px;
-  bottom: 0px;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   max-width: 100%;
   max-height: 100%;
   pointer-events: all;
@@ -102,15 +106,30 @@ svg.exploration {
   &-title {
     position: absolute;
     top: 70px;
+    @media( max-width: $tablet_width ) {
+      top: 110px;
+    }
     width: 100%;
-    margin: auto;
-    text-align: center;
-    &-logo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    &-logo, .citation {
       width: 700px;
+      max-width: 68%;
+      @media( max-width: $wide_width ) {
+        width: 600px;
+      }
+      @media( max-width: $desktop_width ) {
+        width: 600px;
+      }
+
     }
     & > .citation {
       font-family: raleway-italic, sans-serif;
       font-size: 24px;
+      @media( max-width: $tablet_width ) {
+        font-size: 11px;
+      }
     }
     .author {
       margin-left: 15px;
@@ -127,25 +146,56 @@ svg.exploration {
 
 .homepage-left {
   display: flex;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   left: 0;
-}
+  & > img{
+    width: 600px;
+    @media( max-width: $wide_width ) {
+      width: 450px;
+    }
 
-.homepage-left > img{
-  width: 600px;
+    @media( max-width: $desktop_width ) {
+      width: 400px;
+    }
+  }
+  @media( max-width: $tablet_width ) {
+    display: none;
+  }
 }
 
 .homepage-right {
-  display: flex;
-  position: absolute;
-  right: 0;
-  bottom: 0;
+  position: fixed;
   width: 542px;
+  @media( min-width: $mobile_width ) {
+    background-position-y: -16px;
+    background-size: 164%;
+    right: 0;
+  }
+  @media( max-width: $wide_width ) {
+    background-position-y: 39px;
+    background-size: 116%;
+    width: 481px;
+    background-position-x: 89px;
+  }
+  @media( max-width: $desktop_width ) {
+    background-position-y: 39px;
+    background-size: 127%;
+    background-position-x: 89px;
+  }
+
+  @media( max-width: $mobile_width ) {
+    background-position-x: center;
+    background-position-y: 27px;
+  }
+
+  bottom: 0;
+  max-width: 100%;
   height: 584px;
-  background-size: cover;
+  max-height: 60%;
+  background-repeat: no-repeat;
   transition: 0.3s;
-  text-decoration: none;
+  display: flex;
   &:hover {
     transition: 0.3s;
     -webkit-filter: drop-shadow(-10px -6px 0px #dfbb13) drop-shadow(14px 9px 0px #dfbb13);
@@ -155,9 +205,19 @@ svg.exploration {
       transition: 0.3s;
     }
   }
+  a {
+    text-decoration: none;
+    display: flex;
+
+  }
   &-event {
-    padding: 30px;
-    margin-left: 50px;
+    @media( min-width: $mobile_width ) {
+      padding: 30px;
+    }
+    @media( max-width: $mobile_width ) {
+      padding: 10px;
+    }
+    //margin-left: 50px;
     border: solid;
     border-radius: 4px;
     border-width: 8px !important;
@@ -167,16 +227,31 @@ svg.exploration {
     cursor: pointer;
     color: white;
     display: flex;
+    align-items: center;
     &-container {
-      padding: 20px;
       display: flex;
       flex-direction: column;
-      justify-content: center;
       width: 100%;
+      justify-content: center;
+      @media( min-width: $mobile_width ) {
+        padding: 117px 20px 20px 115px;
+      }
+      @media( max-width: $wide_width ) {
+        padding: 117px 10px 20px 115px;
+      }
+      @media( max-width: $mobile_width ) {
+        justify-content: flex-end;
+      }
       h2 {
         font-size: 30px;
+        @media( max-width: $wide_width ) {
+          font-size: 22px;
+        }
+        @media( max-width: $mobile_width ) {
+          font-size: 16px;
+        }
         color: white;
-        margin-left: 100px;
+        //margin-left: 100px;
         text-align: center;
       }
     }
@@ -189,6 +264,16 @@ svg.exploration {
       display: flex;
       align-items: center;
       img {
+        width: 150px;
+        height: 150px;
+        @media( max-width: $wide_width ) {
+          width: 100px;
+          height: 100px;
+        }
+        @media( max-width: $mobile_width ) {
+          width: 100px;
+          height: 100px;
+        }
         border: 5px solid white;
         border-radius: 1px;
         transition: 0.3s;
@@ -197,21 +282,24 @@ svg.exploration {
     &-content {
       padding: 0 20px;
       &-title {
-        font-size: 1.7em;
+        h3, p {
+          max-width: 50px;
+        }
+        font-size: 1em;
         h3 {
           margin-bottom: 10px;
-          margin-top: 15px;
+          margin-top: 0;
         }
       }
       &-date {
         margin-bottom: 5px;
         font-weight: bold;
         color: #dfbb13;
-        font-size: 1.3em;
+        font-size: 0.9em;
       }
       &-location {
         margin-bottom: 8px;
-        font-size: 1.1em;
+        font-size: 0.9em;
       }
       p {
         margin-top: 0;
