--- a/src/wp-content/themes/timber/static/style/menu.scss
+++ b/src/wp-content/themes/timber/static/style/menu.scss
@@ -1,9 +1,18 @@
+@import "variables-site/structure";
+
 .nav-menu {
     position: absolute;
     margin-top: 1rem;
     margin-left: 1rem;
+    @media( max-width: $tablet_width ) {
+        display: flex;
+        align-items: center;
+    }
 
     &-icon {
+        @media( max-width: $tablet_width ) {
+            height: 40px;
+        }
         & > svg, & > img {
             margin: 10px;
             margin-top: 0;
@@ -13,6 +22,10 @@
             width: 50px;
             height: 50px;
             fill: black;
+            @media( max-width: $tablet_width ) {
+                width: 40px;
+                height: 40px;
+            }
         }
         &--open > svg, &--open > img {
             transform: rotate(90deg);
@@ -26,6 +39,17 @@
         display: flex;
         flex-direction: column;
         transition: opacity 0.3s;
+        @media( max-width: $tablet_width ) {
+            margin-left: 17px;
+            margin-bottom: 5px;
+            flex-direction: row;
+            position: relative;
+        }
+        &:not(.nav-menu-items--open) {
+            a {
+                pointer-events: none;
+            }
+        }
         &--open {
             opacity: 1;
             transition: opacity 0.3s;
@@ -33,9 +57,15 @@
         & > .nav-menu-item {
             margin: 5px;
             margin-left: 0;
+            @media( max-width: $tablet_width ) {
+                margin-right: 16px;
+            }
             a {
                 color: black;
                 font-size: 1.3em;
+                @media( max-width: $tablet_width ) {
+                    font-size: 1.1em;
+                }
                 text-decoration: none;
                 transition: opacity 0.3s;
             }
