--- a/src/wp-content/themes/timber/static/style/home-page.scss
+++ b/src/wp-content/themes/timber/static/style/home-page.scss
@@ -150,7 +150,8 @@ svg.exploration {
   bottom: 0;
   left: 0;
   & > img{
-    width: 600px;
+    transition: 1s;
+    width: 500px;
     @media( max-width: $wide_width ) {
       width: 450px;
     }
@@ -168,22 +169,22 @@ svg.exploration {
   position: fixed;
   width: 542px;
   @media( min-width: $mobile_width ) {
-    background-position-y: -16px;
+    //background-position-y: -16px;
     background-size: 164%;
     right: 0;
+    @media( max-width: $wide_width ) {
+      //background-position-y: 39px;
+      background-size: 145%;
+      width: 481px;
+      //background-position-x: 56px;
+    }
+    @media( max-width: $desktop_width ) {
+      //background-position-y: -5px;
+      background-size: 144%;
+      width: 410px;
+      //background-position-x: 9px;
+    }
   }
-  @media( max-width: $wide_width ) {
-    background-position-y: 39px;
-    background-size: 116%;
-    width: 481px;
-    background-position-x: 89px;
-  }
-  @media( max-width: $desktop_width ) {
-    background-position-y: 39px;
-    background-size: 127%;
-    background-position-x: 89px;
-  }
-
   @media( max-width: $mobile_width ) {
     background-position-x: center;
     background-position-y: 27px;
@@ -191,7 +192,6 @@ svg.exploration {
 
   bottom: 0;
   max-width: 100%;
-  height: 584px;
   max-height: 60%;
   background-repeat: no-repeat;
   transition: 0.3s;
@@ -235,15 +235,18 @@ svg.exploration {
       justify-content: center;
       @media( min-width: $mobile_width ) {
         padding: 117px 20px 20px 115px;
-      }
-      @media( max-width: $wide_width ) {
-        padding: 117px 10px 20px 115px;
+        @media( max-width: $wide_width ) {
+          padding: 117px 0px 20px 115px;
+        }
+        @media( max-width: $desktop_width ) {
+          padding: 117px 0px 20px 56px;
+        }
       }
       @media( max-width: $mobile_width ) {
         justify-content: flex-end;
       }
       h2 {
-        font-size: 30px;
+        font-size: 25px;
         @media( max-width: $wide_width ) {
           font-size: 22px;
         }
