smaller logo size

--- a/src/wp-content/themes/timber/templates/mdf-menu.twig
+++ b/src/wp-content/themes/timber/templates/mdf-menu.twig
@@ -10,6 +10,9 @@
 						transform="translate(-58.021206,-120.43598)">
 					<g
 							transform="translate(45.595238,-139.33334)">
+{#						<text x="14" y="256" style="#}
+{#							font-size: 11px;#}
+{#						">MENU</text>#}
 						<circle
 								r="7.1815472"
 								cy="266.95087"
