--- a/src/wp-content/themes/timber/templates/pages/home-page.twig
+++ b/src/wp-content/themes/timber/templates/pages/home-page.twig
@@ -48,10 +48,10 @@
     <div class="nav">
         <div class="nav-title">
             <img class='nav-title-logo' src="{{ site.theme.link }}/images/logo-titre.png"/>
-            <p class="citation"><i>'Un projecteur sur le front,
-                Comme au casque du mineur, <br>
-                Artiste mineur de fond' <span class="author">C. Nougaro</span></i>
-            </p>
+{#            <p class="citation"><i>'Un projecteur sur le front,#}
+{#                Comme au casque du mineur, <br>#}
+{#                Artiste mineur de fond' <span class="author">C. Nougaro</span></i>#}
+{#            </p>#}
         </div>
         {% include 'mdf-menu.twig' %}
     </div>
