fix: event size width

--- a/src/wp-content/themes/timber/static/style/home-page.scss
+++ b/src/wp-content/themes/timber/static/style/home-page.scss
@@ -281,7 +281,7 @@ svg.exploration {
       padding: 0 20px;
       &-title {
         h3, p {
-          max-width: 50px;
+          //max-width: 50px;
         }
         font-size: 1em;
         h3 {
