--- a/src/wp-content/themes/timber/blocks/exploration-rock/assets/exploration-rock.scss
+++ b/src/wp-content/themes/timber/blocks/exploration-rock/assets/exploration-rock.scss
@@ -1,23 +1,26 @@
 
 .roche:hover .text {
   opacity: 1;
-  transition: opacity 1s;
-  transition-delay: 0.7s;
+  color: white;
+  transition: opacity 0.5s;
 }
 .roche {
   z-index: 10;
   position: relative;
   margin: auto;
-  transition: filter 3s;
+  transition: filter 0.5s;
+  filter: brightness(0);
   width: 200px;
   height: 200px;
+  text-align: center;
   a:link {
     text-decoration: none;
   }
   .text {
     opacity: 0;
-    transition: opacity 3s;
-    color: white;
+    width: 60%;
+    transition: opacity 0.5s;
+    color: #dedede;
     font-family: raleway-bold sans-serif;
     font-weight: bold;
   }
@@ -32,11 +35,13 @@
 }
 
 .roche:hover {
-  transition: filter 0.8s;
-  filter: invert(0.9);
-  -webkit-filter: invert(0.9);
+  transition: filter 0.5s;
+  filter: brightness(1.5);
+  -webkit-filter: brightness(1.5);
 }
 
+
+// default position
 .roche_brutus {
   bottom: -60%;
   right: 40%;
@@ -45,7 +50,4 @@
 .roche_minus {
   bottom: 8%;
   right: -30%;
-}
-
-.roche_red {
 }
