bet exploration view, added depth configuration

--- a/src/wp-content/themes/timber/blocks/exploration-rock/assets/exploration-rock.scss
+++ b/src/wp-content/themes/timber/blocks/exploration-rock/assets/exploration-rock.scss
@@ -42,12 +42,12 @@
 
 
 // default position
-.roche_brutus {
-  bottom: -60%;
-  right: 40%;
-
-}
-.roche_minus {
-  bottom: 8%;
-  right: -30%;
-}
+//.roche_brutus {
+//  bottom: -60%;
+//  right: 40%;
+//
+//}
+//.roche_minus {
+//  bottom: 8%;
+//  right: -30%;
+//}
